[gd_scene load_steps=5 format=3 uid="uid://dwy8lhour13bd"]

[ext_resource type="Script" path="res://play.gd" id="1_b5noo"]
[ext_resource type="Texture2D" uid="uid://bvv1oqobvdvcq" path="res://play_background.jpg" id="1_xs1fu"]
[ext_resource type="AudioStream" uid="uid://dug6wuq4bfumm" path="res://rhythm-of-war-main-7233.mp3" id="2_g1eq3"]

[sub_resource type="LabelSettings" id="LabelSettings_xitqp"]
font_size = 32

[node name="Play" type="Node2D"]
script = ExtResource("1_b5noo")

[node name="Rhythm-of-war-main-7233" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_g1eq3")
autoplay = true

[node name="PlayBackground" type="Sprite2D" parent="."]
position = Vector2(580, 320)
scale = Vector2(0.566406, 0.468864)
texture = ExtResource("1_xs1fu")

[node name="Button" type="Button" parent="."]
offset_left = 72.0
offset_top = 208.0
offset_right = 312.0
offset_bottom = 320.0

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 176.0
offset_bottom = 80.0
text = "Quiz"
label_settings = SubResource("LabelSettings_xitqp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="."]
offset_left = 400.0
offset_top = 208.0
offset_right = 640.0
offset_bottom = 320.0

[node name="Label" type="Label" parent="Button2"]
layout_mode = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 176.0
offset_bottom = 80.0
text = "Stories
"
label_settings = SubResource("LabelSettings_xitqp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="."]
offset_left = 736.0
offset_top = 208.0
offset_right = 976.0
offset_bottom = 320.0

[node name="Label" type="Label" parent="Button3"]
layout_mode = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 176.0
offset_bottom = 80.0
text = "Adventure"
label_settings = SubResource("LabelSettings_xitqp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Backbutton" type="Button" parent="."]
offset_right = 152.0
offset_bottom = 64.0

[node name="Label" type="Label" parent="Backbutton"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 56.0
text = "Back"
label_settings = SubResource("LabelSettings_xitqp")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Backbutton" to="." method="_on_backbutton_pressed"]
